--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="theme-color" content="#333333" />
+    <meta name="description" content="라이즈 오브 킹덤즈 GG" />
+    <meta property="keywords" content="라이즈 오브 킹덤즈, 라이즈 오브 킹덤즈 사령관, rok, rokgg, rok.gg" />
 
     %sapper.base%
 
