--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,10 @@
     <meta name="theme-color" content="#333333" />
     <meta name="description" content="라이즈 오브 킹덤즈 GG" />
     <meta property="keywords" content="라이즈 오브 킹덤즈, 라이즈 오브 킹덤즈 사령관, rok, rokgg, rok.gg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="ROK.GG" />
+    <meta property="og:description" content="라이즈 오브 킹덤즈 사령관 특성 모음" />
+    <meta property="og:url" content="http://rok.gg" />
 
     %sapper.base%
 
