--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="ROK.GG" />
     <meta property="og:description" content="라이즈 오브 킹덤즈 사령관 특성 모음" />
     <meta property="og:url" content="http://rok.gg" />
+    <meta name="naver-site-verification" content="ee11673636e1d0ee1e6b1ea8a35ec0552107fa15" />
 
     %sapper.base%
 
