--- a/src/template.html
+++ b/src/template.html
@@ -53,6 +53,11 @@
     <footer>
       <div>
         <p>Rise Of Kingdoms GG</p>
+        <p>
+          <a href="mailto:notice.rokgg@gmail.com">
+            Contact Us
+          </a>
+        </p>
       </div>
     </footer>
   </body>
