--- a/src/template.html
+++ b/src/template.html
@@ -51,6 +51,20 @@
       initialise the router -->
     %sapper.scripts%
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- 가로 긴거 -->
+    <ins
+      class="adsbygoogle"
+      style="display:block"
+      data-ad-client="ca-pub-8271789671155671"
+      data-ad-slot="9536839823"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     <footer>
       <div>
         <p>Rise Of Kingdoms GG</p>
